echo env var change image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run: echo world
   print_env_var:
     docker:
-      - image: cimg/base:2020.01
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run:
@@ -31,8 +31,8 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
-      -print_env_var
       - print_hello
       - print_world:
           requires:
             - print_hello
+      -print_env_var
