--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,3 +46,6 @@ workflows:
             - print_hello
       - print_env_var
       - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
