--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,10 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
+  commands:
+  print_pipeline_id:
+    steps:
+      - run: echo $MY_ENV_VAR
 # Orchestrate or schedule a set of jobs
 jobs:
   print_hello:
@@ -34,6 +38,11 @@ jobs:
           root: ~/
           paths:
             - output.txt
+  reusable_job_code:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
 workflows:
   # Name the workflow "welcome"
   welcome:
@@ -49,3 +58,4 @@ workflows:
       - print_output_file:
           requires:
             - save_hello_world_output
+      - reusable_job_code
